[fix update] #325 型定義・API定義の陳腐化修正
